--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
 				<a-entity rotation="0 72 0">
 					<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
 					<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".035 .035 .035" position="2 0 5" visible='false'></a-entity>
-					<a-box opacity=".2" id="seedMouseBox" curseor-listener blurb-view-close-seed
+					<a-box opacity=".2" id="seedMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
-					<a-sphere opacity="0" cursor-listener blurb-view-opener-seed position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
+					<a-sphere opacity="0" cursor-listener class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 				</a-entity>
 			</a-entity>
 
@@ -175,10 +175,10 @@
 				<a-entity rotation="0 144 0">
 					<a-entity id="treeTitleCSS" css-object="div: #treeTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
 					<a-entity id="treeBlurbCSS" css-object="div: #treeBlurb" scale=".035 .035 .035" position="2 0 5" visible='false'></a-entity>
-					<a-box opacity=".2" id="treeMouseBox" curseor-listener blurb-view-close-tree
+					<a-box opacity=".2" id="treeMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="tree" src="#tree-obj" mtl="#tree-mtl" opacity="0"></a-obj-model>
-					<a-sphere opacity="0" cursor-listener blurb-view-opener-tree position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
+					<a-sphere opacity="0" cursor-listener class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 				</a-entity>
 			</a-entity>
 
@@ -187,10 +187,10 @@
 				<a-entity rotation="0 216 0">
 					<a-entity id="nasalnanobotsTitleCSS" css-object="div: #nasalnanobotsTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
 					<a-entity id="nasalnanobotsBlurbCSS" css-object="div: #nasalnanobotsBlurb" scale=".035 .035 .035" position="2 0 5" visible='false'></a-entity>
-					<a-box opacity=".2" id="nasalMouseBox" curseor-listener blurb-view-close-nasal
+					<a-box opacity=".2" id="nasalMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="nasal" src="#nasalnanobots-obj" mtl="#nasalnanobots-mtl" opacity="0"></a-obj-model>
-					<a-sphere opacity="0" cursor-listener blurb-view-opener-nasal position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
+					<a-sphere opacity="0" cursor-listener class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 				</a-entity>
 			</a-entity>
 
@@ -199,10 +199,10 @@
 				<a-entity rotation="0 288 0">
 					<a-entity id="sprayTitleCSS" css-object="div: #sprayTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
 					<a-entity id="sprayBlurbCSS" css-object="div: #sprayBlurb" scale=".035 .035 .035" position="2 0 5" visible='false'></a-entity>
-					<a-box opacity=".2" id="sprayMouseBox" curseor-listener blurb-view-close-spray
+					<a-box opacity=".2" id="sprayMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="spray" src="#spray-obj" mtl="#spray-mtl" opacity="0"></a-obj-model>
-					<a-sphere opacity="0" cursor-listener blurb-view-opener-spray position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
+					<a-sphere opacity="0" cursor-listener class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 				</a-entity>
 			</a-entity>
 
