--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<img src="resources/images/NasalNanobots.jpg" id="nasalnanobotsBlurb" visible="false" style="width:100px;height:100px;"></img>
 	</div>
 
-	<ar-scene vr-mode-ui>
+	<a-scene vr-mode-ui>
 		<a-assets>
 			<a-asset-item src="resources/images/QuadPanorama.jpg" id="quadPano"></a-asset-item>
 			<a-asset-item src="resources/images/roomPanorama.jpg" id="roomPano"></a-asset-item>
@@ -79,13 +79,15 @@
 			<a-asset-item src="resources/models/Inhalable.mtl" id="nasalnanobots-mtl" ></a-asset-item>
 			<a-asset-item src="resources/models/DisplayPaint.obj" id="spray-obj" ></a-asset-item>
 			<a-asset-item src="resources/models/DisplayPaint.mtl" id="spray-mtl" ></a-asset-item>
+			<audio id="ambience-sound" src="resources/audios/PortolAmbience.mp3" preload="auto"></audio>
+			<audio id="intro-sound" src="resources/audios/Intro.mp3" preload="auto"></audio>
 		</a-assets>
 
 		<a-entity light="type: ambient; color: #CCC" intensity="3"></a-entity>
 		<!-- <a-entity id="camera"> -->
- 		<!-- <a-entity camera look-controls wasd-controls > -->
+ 		<a-entity camera look-controls wasd-controls >
 		
-<ar-camera>
+<!-- <ar-camera> -->
 	<a-entity id="myCursor" cursor="fuse:true; fuse-timeout: 2000"
 	position="0 0 -0.1"
 	geometry="primitive:ring; radiusInner: 0.0025; radiusOuter: 0.00375; thetaStart: 0; thetaLength: 360;"
@@ -108,7 +110,7 @@
 				to="1 1 1"
 				dur="200"></a-animation>	-->  		   
 			</a-entity> 
-		</ar-camera>
+		<!-- </ar-camera> -->
  		</a-entity>
 
 <a-entity id="sky">
@@ -149,7 +151,8 @@
 			<!-- <a-entity position="0 -65 0" particle-system="color: #00EF00,#CCCC00; direction:-1;type:2;size:0.5;preset: dust"></a-entity> -->
 		</a-entity>
 
-
+		<a-entity id='ambience-sound-player' sound='src: #ambience-sound'></a-entity>
+		<a-entity id='intro-sound-player' sound='src: #intro-sound'></a-entity>
 		<a-sphere id="room" src ="#roomPano" radius="25" opacity="0" side="double">
 
 		<!-- axis orientation spheres -->
@@ -166,7 +169,7 @@
 					<a-box opacity=".2" id="seedMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
-					<a-sphere opacity="0" cursor-listener class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
+					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 				</a-entity>
 			</a-entity>
 
@@ -178,7 +181,7 @@
 					<a-box opacity=".2" id="treeMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="tree" src="#tree-obj" mtl="#tree-mtl" opacity="0"></a-obj-model>
-					<a-sphere opacity="0" cursor-listener class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
+					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 				</a-entity>
 			</a-entity>
 
@@ -190,7 +193,7 @@
 					<a-box opacity=".2" id="nasalMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="nasal" src="#nasalnanobots-obj" mtl="#nasalnanobots-mtl" opacity="0"></a-obj-model>
-					<a-sphere opacity="0" cursor-listener class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
+					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 				</a-entity>
 			</a-entity>
 
@@ -202,7 +205,7 @@
 					<a-box opacity=".2" id="sprayMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="spray" src="#spray-obj" mtl="#spray-mtl" opacity="0"></a-obj-model>
-					<a-sphere opacity="0" cursor-listener class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
+					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 				</a-entity>
 			</a-entity>
 
@@ -210,7 +213,7 @@
 
 	</a-entity>
 </a-entity>
-</ar-scene>
+</a-scene>
 
 <script src="resources/js/gttm.js"></script>
 </body>
