--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 		<a-entity id='intro-sound-player' sound='src: #intro-sound; autoplay: true; volume: 1' position="0 -74 0"></a-entity>
 		<script>
 		document.querySelector("#intro-sound-player").components.sound.playSound();
+		console.log("AAAAA");
 		</script>
 		<a-sphere id="room" src ="#roomPano" radius="25" opacity="0" side="double">
 
