--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 		</a-entity>
 
 		<a-entity id='ambience-sound-player' sound='src: #ambience-sound'></a-entity>
-		<a-entity id='intro-sound-player' sound='src: #intro-sound; autoplay: true; volume: 1' position="0 -74 0"></a-entity>
+		<a-entity id='intro-sound-player' sound='src: #intro-sound; volume: 1' position="0 -74 0"></a-entity>
 		<script>
 		// document.querySelector("#intro-sound-player").components.sound.playSound();
 		// console.log("AAAAA");
