--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 			<!-- <a-entity position="0 -65 0" particle-system="color: #00EF00,#CCCC00; direction:-1;type:2;size:0.5;preset: dust"></a-entity> -->
 		</a-entity>
 
-		<a-entity id='ambience-sound-player' sound='src: #ambience-sound; loop: true'></a-entity>
-		<a-entity id='intro-sound-player' sound='src: #intro-sound; volume: 1' position="0 -74 0"></a-entity>
+		<a-entity id='ambience-sound-player' sound='src: #ambience-sound; loop: true' position= "0 0 0"></a-entity>
+		<a-entity id='intro-sound-player' sound='src: #intro-sound; volume: 1; autoplay: true' position="0 -74 0"></a-entity>
 		<script>
 		// document.querySelector("#intro-sound-player").components.sound.playSound();
 		// console.log("AAAAA");
