--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
 		<a-assets>
 			<audio id="ambience-sound" src="resources/audios/PortolAmbience.mp3" preload="auto"></audio>
 			<audio id="intro-sound" src="resources/audios/Intro.mp3" preload="auto"></audio>
+			<audio id="spray-sound" src="resources/audios/DisplayPaint1.mp3" preload="auto"></audio>
+			<audio id="nasal-sound" src="resources/audios/inhalable1.mp3" preload="auto"></audio>
+			<audio id="seed-sound" src="resources/audios/SeedPod1.mp3" preload="auto"></audio>
+			<audio id="tree-sound" src="resources/audios/CarbonTrees1.mp3" preload="auto"></audio>
 			<a-asset-item src="resources/images/QuadPanorama.jpg" id="quadPano"></a-asset-item>
 			<a-asset-item src="resources/images/roomPanorama.jpg" id="roomPano"></a-asset-item>
 			<a-asset-item src="resources/models/portalRing.obj" id="portalRing-obj" ></a-asset-item>
@@ -81,7 +85,6 @@
 			<a-asset-item src="resources/models/Inhalable.mtl" id="nasalnanobots-mtl" ></a-asset-item>
 			<a-asset-item src="resources/models/DisplayPaint.obj" id="spray-obj" ></a-asset-item>
 			<a-asset-item src="resources/models/DisplayPaint.mtl" id="spray-mtl" ></a-asset-item>
-			
 		</a-assets>
 
 		<a-entity light="type: ambient; color: #CCC" intensity="3"></a-entity>
@@ -139,7 +142,7 @@
 		</a-entity>
 
 		<a-entity id='ambience-sound-player' sound='src: #ambience-sound; loop: true' position= "0 0 0"></a-entity>
-		<a-entity id='intro-sound-player' sound='src: #intro-sound; volume: 1; autoplay: true' position="0 -74 0"></a-entity>
+		<a-entity id='intro-sound-player' sound='src: #intro-sound; volume: 1; autoplay: true' position="0 0 0"></a-entity>
 		<script>
 		// document.querySelector("#intro-sound-player").components.sound.playSound();
 		// console.log("AAAAA");
@@ -161,6 +164,7 @@
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
+					<a-entity id='seed-sound-player' sound='src: #seed-sound;' position= "0 0 0"></a-entity>
 				</a-entity>
 			</a-entity>
 
@@ -173,6 +177,7 @@
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="tree" src="#tree-obj" mtl="#tree-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
+					<a-entity id='tree-sound-player' sound='src: #tree-sound;' position= "0 0 0"></a-entity>
 				</a-entity>
 			</a-entity>
 
@@ -185,6 +190,7 @@
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="nasal" src="#nasalnanobots-obj" mtl="#nasalnanobots-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
+					<a-entity id='nasal-sound-player' sound='src: #nasal-sound;' position= "0 0 0"></a-entity>
 				</a-entity>
 			</a-entity>
 
@@ -197,6 +203,7 @@
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="spray" src="#spray-obj" mtl="#spray-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
+					<a-entity id='spray-sound-player' sound='src: #spray-sound;' position= "0 0 0"></a-entity>
 				</a-entity>
 			</a-entity>
 
