--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<img src="resources/images/NasalNanobots.jpg" id="nasalnanobotsBlurb" visible="false" style="width:100px;height:100px;"></img>
 	</div>
 
-	<a-scene vr-mode-ui>
+	<ar-scene vr-mode-ui>
 		<a-assets>
 			
 			<a-asset-item src="resources/images/QuadPanorama.jpg" id="quadPano"></a-asset-item>
@@ -208,7 +208,7 @@
 
 	</a-entity>
 </a-entity>
-</a-scene>
+</ar-scene>
 
 <script src="resources/js/gttm.js"></script>
 </body>
