sound without volume fadeout

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 
 		<a-entity light="type: ambient; color: #CCC" intensity="3"></a-entity>
 		<!-- <a-entity id="camera"> -->
- 		<a-entity camera look-controls wasd-controls >
+ 		<!-- <a-entity camera look-controls wasd-controls > -->
 		
-<!-- <ar-camera> -->
+<ar-camera>
 	<a-entity id="myCursor" cursor="fuse:true; fuse-timeout: 2000"
 	position="0 0 -0.1"
 	geometry="primitive:ring; radiusInner: 0.0025; radiusOuter: 0.00375; thetaStart: 0; thetaLength: 360;"
@@ -101,8 +101,8 @@
 	material="color: #6666FF; shader:flat;opacity:0.8;">
 		   
 			</a-entity> 
-		<!-- </ar-camera> -->
- 		</a-entity>
+		</ar-camera>
+ 		<!-- </a-entity> -->
 
 <a-entity id="sky">
 
