--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 					<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 					<a-entity id='seed-sound-player' sound='src: #seed-sound; volume: 5' position= "0 0 0"></a-entity>
-                    <a-plane id="0" class="button" cursor-listener material="src: #voteHere"></a-plane>
+                    <a-plane id="0" class="button" cursor-listener material="src: #voteHere" scale="0.1 0.1 0.1"></a-plane>
 				</a-entity>
 			</a-entity>
 
@@ -180,7 +180,7 @@
 					<a-obj-model id="tree" src="#tree-obj" mtl="#tree-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 					<a-entity id='tree-sound-player' sound='src: #tree-sound; volume: 5' position= "0 0 0"></a-entity>
-                    <a-plane id="1" class="button" cursor-listener material="src: #voteHere" ></a-plane>
+                    <a-plane id="1" class="button" cursor-listener material="src: #voteHere" scale="0.1 0.1 0.1"></a-plane>
 				</a-entity>
 			</a-entity>
 
@@ -194,7 +194,7 @@
 					<a-obj-model id="nasal" src="#nasalnanobots-obj" mtl="#nasalnanobots-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 					<a-entity id='nasal-sound-player' sound='src: #nasal-sound; volume: 5' position= "0 0 0"></a-entity>
-                    <a-plane id="2" class="button" cursor-listener material="src: #voteHere"></a-plane>
+                    <a-plane id="2" class="button" cursor-listener material="src: #voteHere" scale="0.1 0.1 0.1"></a-plane>
 				</a-entity>
 			</a-entity>
 
@@ -208,7 +208,7 @@
 					<a-obj-model id="spray" src="#spray-obj" mtl="#spray-mtl" opacity="0"></a-obj-model>
 					<a-sphere opacity="0" class="blurb-view-opener" position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
 					<a-entity id='spray-sound-player' sound='src: #spray-sound; volume: 5' position= "0 0 0"></a-entity>
-                    <a-plane id="3" class="button" cursor-listener material="src: #voteHere"></a-plane>
+                    <a-plane id="3" class="button" cursor-listener material="src: #voteHere" scale="0.1 0.1 0.1"></a-plane>
 				</a-entity>
 			</a-entity>
 
