change to arscene

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 		<a-assets>
 			
 			<a-asset-item src="resources/images/QuadPanorama.jpg" id="quadPano"></a-asset-item>
-			<audio id="ambience-sound" src="resources/audios/PortolAmbience.mp3" preload="auto"></audio>
-			<audio id="intro-sound" src="resources/audios/Intro.mp3" preload="auto"></audio>
-			<audio id="spray-sound" src="resources/audios/DisplayPaint1.mp3" preload="auto"></audio>
-			<audio id="nasal-sound" src="resources/audios/inhalable1.mp3" preload="auto"></audio>
-			<audio id="seed-sound" src="resources/audios/SeedPod1.mp3" preload="auto"></audio>
-			<audio id="tree-sound" src="resources/audios/CarbonTrees1.mp3" preload="auto"></audio>
+			<audio id="ambience-sound" src="resources/audios/PortolAmbience.mp3" preload="true"></audio>
+			<audio id="intro-sound" src="resources/audios/Intro.mp3" preload="true"></audio>
+			<audio id="spray-sound" src="resources/audios/DisplayPaint1.mp3" preload="true"></audio>
+			<audio id="nasal-sound" src="resources/audios/inhalable1.mp3" preload="true"></audio>
+			<audio id="seed-sound" src="resources/audios/SeedPod1.mp3" preload="true"></audio>
+			<audio id="tree-sound" src="resources/audios/CarbonTrees1.mp3" preload="true"></audio>
 			<a-asset-item src="resources/images/roomPanorama.jpg" id="roomPano"></a-asset-item>
 			<a-asset-item src="resources/models/portalRing.obj" id="portalRing-obj" ></a-asset-item>
 			<a-asset-item src="resources/models/portalRing.mtl" id="portalRing-mtl" ></a-asset-item>
