--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
 	<!-- Carbon Tree Card -->
 	<div hidden>
 		<div id="treeTitle" visible="true" class="textbox">Carbon Tree<br><br><br><br></div>
-		<img src="resources/images/CarbonTree.jpg" id="treeBlurb" visible="false" style="width:100px;height:100px;">
+		<img src="resources/images/CarbonTree.jpg" id="treeBlurb" visible="false" style="width:200px;height:160px;">
 	</div>
 
 	<!-- Nasal Nanobot Card -->
 	<div hidden>
 		<div id="nasalnanobotsTitle" visible="true" class="textbox">Nasal Nanobots<br><br><br><br></div>
-		<img src="resources/images/NasalNanobots.jpg" id="nasalnanobotsBlurb" visible="false" style="width:100px;height:100px;">
+		<img src="resources/images/NasalNanobots.jpg" id="nasalnanobotsBlurb" visible="false" style="width:200px;height:160px;">
 	</div>
 
 	<ar-scene vr-mode-ui>
@@ -219,7 +219,7 @@
 			<a-entity position="4.64 0 -14.3" rotation="0 -90 0">
 				<a-entity rotation="0 72 0">
 					<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
-					<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".035 .035 .035" position="0 0 0" visible='false'></a-entity>
+					<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale="1 1 1" position="0 0 0" visible='false'></a-entity>
 					<a-box opacity=".2" id="seedMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
@@ -233,7 +233,7 @@
 			<a-entity position="-12.1663 0 -8.83185" rotation="0 -90 0">
 				<a-entity rotation="0 144 0">
 					<a-entity id="treeTitleCSS" css-object="div: #treeTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
-					<a-entity id="treeBlurbCSS" css-object="div: #treeBlurb" scale=".035 .035 .035" position="2 0 5" visible='false'></a-entity>
+					<a-entity id="treeBlurbCSS" css-object="div: #treeBlurb" scale=".035 .035 .035" position="0 0 0" visible='false'></a-entity>
 					<a-box opacity=".2" id="treeMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="tree" src="#tree-obj" mtl="#tree-mtl" opacity="0"></a-obj-model>
@@ -247,7 +247,7 @@
 			<a-entity position="-12.1592 0 8.84162" rotation="0 -90 0">
 				<a-entity rotation="0 216 0">
 					<a-entity id="nasalnanobotsTitleCSS" css-object="div: #nasalnanobotsTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
-					<a-entity id="nasalnanobotsBlurbCSS" css-object="div: #nasalnanobotsBlurb" scale=".035 .035 .035" position="2 0 5" visible='false'></a-entity>
+					<a-entity id="nasalnanobotsBlurbCSS" css-object="div: #nasalnanobotsBlurb" scale=".035 .035 .035" position="0 0 0" visible='false'></a-entity>
 					<a-box opacity=".2" id="nasalMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="nasal" src="#nasalnanobots-obj" mtl="#nasalnanobots-mtl" opacity="0"></a-obj-model>
@@ -261,7 +261,7 @@
 			<a-entity position="4.64 0 14.3" rotation="0 -90 0">
 				<a-entity rotation="0 288 0">
 					<a-entity id="sprayTitleCSS" css-object="div: #sprayTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
-					<a-entity id="sprayBlurbCSS" css-object="div: #sprayBlurb" scale=".035 .035 .035" position="2 0 5" visible='false'></a-entity>
+					<a-entity id="sprayBlurbCSS" css-object="div: #sprayBlurb" scale=".035 .035 .035" position="0 0 0" visible='false'></a-entity>
 					<a-box opacity=".2" id="sprayMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="spray" src="#spray-obj" mtl="#spray-mtl" opacity="0"></a-obj-model>
