--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 			<a-entity position="4.64 0 -14.3" rotation="0 -90 0">
 				<a-entity rotation="0 72 0">
 					<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
-					<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".01 .08 1" position="0 0 -10" visible='false'></a-entity>
+					<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".01 .01 .01" position="0 0 -10" visible='false'></a-entity>
 					<a-box opacity=".2" id="seedMouseBox" cursor-listener class="blurb-view-closer"
 					color='#BB00FF' position="0 0 0" height="7.5" width="15" depth="0" position="0 0 0"></a-box>
 					<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
